RESOLVED FIXED33258
[Regression] PNG-in-ICO decoding in public image decoders broken
https://bugs.webkit.org/show_bug.cgi?id=33258
Summary [Regression] PNG-in-ICO decoding in public image decoders broken
Peter Kasting
Reported 2010-01-06 10:49:21 PST
Created attachment 45968 [details] down.ico http://trac.webkit.org/changeset/52831 broke PNG-in-ICO decoding. Testcase attached. Will fix soon.
Attachments
down.ico (148.83 KB, application/octet-stream)
2010-01-06 10:49 PST, Peter Kasting
no flags
the candidate patch (1.31 KB, patch)
2010-01-06 11:31 PST, Yong Li
darin: review+
Yong Li
Comment 1 2010-01-06 10:53:29 PST
sorry it's my bug. see line 121 in PNGImageDecoder.cpp: if ((sizeOnly && decoder->isSizeAvailable()) || m_hasFinishedDecoding) break; just chaning "break" to "return" should fix it. -Yong
Yong Li
Comment 2 2010-01-06 11:31:39 PST
Created attachment 45973 [details] the candidate patch
WebKit Review Bot
Comment 3 2010-01-06 11:35:42 PST
Attachment 45973 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 Traceback (most recent call last): File "WebKitTools/Scripts/check-webkit-style", line 98, in <module> main() File "WebKitTools/Scripts/check-webkit-style", line 62, in main defaults = style.ArgumentDefaults(style.DEFAULT_OUTPUT_FORMAT, AttributeError: 'module' object has no attribute 'ArgumentDefaults'
Adam Barth
Comment 4 2010-01-06 11:42:13 PST
Sorry for the spam. Stylebot is sick.
Eric Seidel (no email)
Comment 5 2010-01-06 14:06:46 PST
Eric Seidel (no email)
Comment 6 2010-01-06 14:08:06 PST
Eric Seidel (no email)
Comment 7 2010-01-06 14:08:53 PST
Do we not have a way to test image decoders? I'm surprised this landed w/o a test case?
Eric Seidel (no email)
Comment 8 2010-01-06 14:14:59 PST
Yong doesn't seem to be around on IRC, so I'm rolling this out in hopes it will fix the crashes on the bot.
Eric Seidel (no email)
Comment 9 2010-01-06 14:26:42 PST
Rolled out in http://trac.webkit.org/changeset/52871. Peter Kasting notes that we may need to roll out r52831 as well, otherwise this breaks chromium. This change should have been unrelated. If it's found to be unrelated, I'll roll it back in.
Eric Seidel (no email)
Comment 10 2010-01-06 14:38:06 PST
I'm rolling this back in after further discussions with Peter and Yong. I'm testing it on Leopard Debug first to make sure.
Eric Seidel (no email)
Comment 11 2010-01-06 14:43:59 PST
The leopard build is broken at the moment due to http://trac.webkit.org/changeset/52872, so I can't land the re-land yet.
Eric Seidel (no email)
Comment 12 2010-01-06 16:26:55 PST
Note You need to log in before you can comment on or make changes to this bug.