2010-01-06  Eric Seidel  <eric@webkit.org>

Unreviewed.  Rolling back in a change I should not have rolled out.

        The original commit http://trac.webkit.org/changeset/52862
        was rolled out again in http://trac.webkit.org/changeset/52871
        but I now believe that rollout to be in error.
        My sincerest apologies for the churn.

        Fix the bug in previous commit: we shouldn't finish
        decoding if "sizeOnly" is true.
        https://bugs.webkit.org/show_bug.cgi?id=33258

        * platform/image-decoders/png/PNGImageDecoder.cpp:
        (WebCore::PNGImageReader::decode):

Canonical link: https://commits.webkit.org/44292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52880 268f45cc-cd09-0410-ab3c-d52691b4dbfc